14.feb (ws)
      - make sure notes are sorted in chord note list; this fixes some obscure bugs
      (lv)
      - fixed bug #4495: MusicXML import crashing if no time signature specified
14.feb (ws)
      - added "scales" plugin from Maurizio M. Gavioli
13.feb (ws)
      - overhaul of script bindings
       (lv)
      - bug #4477: MusicXML: tremolos between two notes not exported/imported
        export implemented according to comments by David Bolton on Thu, 02/11/2010 - 19:29
12,feb (ws)
      - undo/redo are now application shortcuts and work even if a palette opened
        by create is active
      - export small staves in part always at normal size
11.feb (ws)
      - update to scripting interface
8.feb (db)
      - update windows build for JACK 1.9.4
7.feb (db)
      - instrument lists updated with new transposition tags
      (og)
      - exportly, fixed bug: incorrect placement of repeats and
        double-bars after pickup-bar.
6.feb (lv)
      - MusicXML import/export of rest display-step and -octave
      (la)
      - upgrade windows build for Qt 4.6.1
5.feb (ws)
      - fixed crash on exit with newest qt libraries: replaced global QIcon with QIcon* to avoid
        destructor call on exit
04 feb (la)
      - Change app name in windows installer
      - Change default install path for windows installer
02.feb (og)
      - Exportly.cpp: If \voiceOne etc. is used in pianostaff,
        articulation signs are either placed on only above or only below
        staff, and not in any reasonable connection with the notehead. So
        \voiceOne etc. is no longer used in pianostaff.
1.feb (lv)
      - export MusicXML <print new-system> also in converter mode
31.jan (ws)
      - add systemFlag property to text style dialog and text property dialog
      - on default set systemFlag for repeat text style and system text style
      (lv)
      - fix MusicXML import/export of several clefs
      (db)
      - splash screen for beta
      - update handbooks